# cobit

./: .gitignore  Makefile  README.md  pyproject.toml
src/cobit/: config.json  main.py
src/cobit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cobit/ingestion/: ingestion_pipeline.py  market_trades_ingestion.py  order_book_ingestion.py  raw_exports.py
src/cobit/kraken/: exceptions.py  kraken_auth.py  kraken_client.py  kraken_services.py
src/cobit/storage/: market_trades_parquet.py  storage_pipeline.py  store_parquets.py
src/cobit/utils/: config.py  io.py  logger.py  paths.py  utils.py
