[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "cobit"
version = "0.1.0"
description = "Cryptocurrency Order Book Ingestion Tool for retrieving and storing Kraken market data."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Derek Nugroho" }
]

keywords = [
    "cryptocurrency",
    "order-book",
    "data-ingestion",
    "kraken",
    "aws",
    "s3",
    "market-data",
    "pipeline"
]

dependencies = [
    # "requests>=2.31",
    # "websockets>=11.0",
    # "boto3>=1.34",
    # "pydantic>=2.6",
    # "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/dereknugroho/cobit"
Documentation = "https://github.com/dereknugroho/cobit"
Repository = "https://github.com/dereknugroho/cobit"

[tool.hatch.build.targets.wheel]
packages = ["cobit"]

