[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobit"
version = "0.1.0"
description = "Cryptocurrency Order Book Ingestion Tool"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Derek Nugroho" }
]

dependencies = [
    # "requests>=2.31",
    # "websockets>=11.0",
    # "boto3>=1.34",
    # "pydantic>=2.6",
    # "loguru>=0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
